--- a/index.html
+++ b/index.html
@@ -1,58 +1,25 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
+<head>
+<title>Welcome to nginx!</title>
+<style>
+    body {
+        width: 35em;
+        margin: 0 auto;
+        font-family: Tahoma, Verdana, Arial, sans-serif;
+    }
+</style>
+</head>
 <body>
-<h1>Multi Control TC</h1>
-<h3> 1. text </h3>
-<p> hello,nice to meet you!</p>
-<br>
-<br>
-<h3> 2. textarea </h3>
-<textarea id="w3review" name="w3review" rows="4" cols="50"> At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.</textarea>
-<br>
-<br>
-</p><h3> 3. Link </h3>
-<a href="https://www.w3schools.com">Visit W3Schools.com!</a>
-<br>
-<br>
-<h3> 4. image </h3>
-<img src="./hali.jpg" height="250">
-<br>
-<br>
-<h3> 5. image with alt attribute </h3>
-<img src="./news-p.v1.20221114.9ae60c6289484d45a66923c018447519_P1.png" alt="sabo" height="250">
-<br>
-<br>
-<h3> 6. html </h3>
-<div>
-<div class="text_area">
-<strong class="title"> '부상 언급도 그만해주세요' → 손흥민 "부탁인데, 이 자리로 손가락 얘기는 그만했으면"</strong>
-<p class="news">
-(베스트 일레븐=서울)2023 아시아축구연맹(AFC) 카타르 아시안컵 이후 손흥민이 처음으로 인사를 전했다. 손흥민은 일련의 상황을 정리하기 위한 메시지를 ..."
-</p>
-<div class="information">
-<span>베스트일레븐</span>
-<span>대표팀</span>
-</div>
-</div>
-</div>
-<br>
-<br>
-<h3> 7. html with image</h3>
-<div>
-<div class="image_area">
-<img src="./hali.jpg" onerror="imageOnError(this);" width="160" height="95" alt="">
-</div>
-<div class="text_area">
-<strong class="title"> '부상 언급도 그만해주세요' → 손흥민 "부탁인데, 이 자리로 손가락 얘기는 그만했으면"</strong>
-<p class="news">
-(베스트 일레븐=서울)2023 아시아축구연맹(AFC) 카타르 아시안컵 이후 손흥민이 처음으로 인사를 전했다. 손흥민은 일련의 상황을 정리하기 위한 메시지를 ..."
-</p>
-<div class="information">
-<span>베스트일레븐</span>
-<span>대표팀</span>
-</div>
-</div>
-</div>
+<h1>Welcome to nginx!</h1>
+<p>If you see this page, the nginx web server is successfully installed and
+working. Further configuration is required.</p>
+
+<p>For online documentation and support please refer to
+<a href="http://nginx.org/">nginx.org</a>.<br/>
+Commercial support is available at
+<a href="http://nginx.com/">nginx.com</a>.</p>
+
+<p><em>Thank you for using nginx.</em></p>
 </body>
 </html>
