--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <br>
 <h3> 5. image with alt attribute </h3>
 <img src="./news-p.v1.20221114.9ae60c6289484d45a66923c018447519_P1.png" alt="sabo" height="250">
+<img src="https://postfiles.pstatic.net/MjAyNDA1MjZfMTgw/MDAxNzE2NzI3NDM5NzEw.LHgEFl9I2s8n3Lc3ImxpFh1gEuiMwJI7b3Fj2kTpoiQg.1JBi_B6cbQ0kpAvXmKDY8YBxQtgu3lcJmqPb0Ji4yrcg.JPEG/20240523%EF%BC%BF174002.jpg?type=w773" data-lazy-src="" data-width=900 data-height=675 alt="" class="se-image-resource egjs-visible">
 <br>
 <br>
 <h3> 6. html </h3>
